# rcfiles

./: .bootstrap.darwin.sh  .bootstrap.linux.sh  .bootstrap.ps1  .bootstrap.windows.ps1  .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiexternal.toml.tmpl  .chezmoiignore  .chezmoiignore.tmpl  .chezmoiremove  .editorconfig  .gitattributes  .gitignore  .install-1password.ps1  .install-1password.sh  .mise.toml  .pre-commit-config.yaml  .stylua.toml  .test_durations  .yamllint  AGENTS.md  CLAUDE.md  LICENSE  README.md  conftest.py  done.txt  dot_bashrc  dot_default-python-packages  dot_default-python-packages.tmpl  dot_dogrc.tmpl  dot_p4enviro.tmpl  dot_profile.tmpl  dot_vimrc  dot_wezterm.lua  dot_wezterm.lua.tmpl  dot_xonshrc  dot_zprofile  dot_zshenv  dot_zshenv.tmpl  modify_private_dot_claude.json  (+27 more)
.backups/: Brewfile.dfrank.MLF67N6G9N5W  Brewfile.dmf.Mac  Brewfile.dmf.dmf-macbookpro2023.local  mise-ls.RIOTGAMES+dfrank.RGAP-MXL5113G09  mise-ls.dfrank.MLF67N6G9N5W  mise-ls.dfrank.RGAP-MXL5113G09  mise-ls.dmf.Mac  mise-ls.dmf.dmf-macbookpro2023.local  ollama-models.dmf.dmf-macbookpro2023.local  pacman-packages.dfrank.RGAP-MXL5113G09  pip-freeze.dfrank.MLF67N6G9N5W  pip-freeze.dfrank.RGAP-MXL5113G09  pip-freeze.dmf.Mac  pip-freeze.dmf.dmf-macbookpro2023.local  xontrib-freeze.dfrank.MLF67N6G9N5W  xontrib-freeze.dfrank.RGAP-MXL5113G09  xontrib-freeze.dmf.Mac  xontrib-freeze.dmf.dmf-macbookpro2023.local  xpip-freeze.dfrank.MLF67N6G9N5W  xpip-freeze.dfrank.RGAP-MXL5113G09  xpip-freeze.dmf.Mac  xpip-freeze.dmf.dmf-macbookpro2023.local  yay-packages.dfrank.RGAP-MXL5113G09
(+706 files in other folders)
