[project]
name = "chezmoi-dotfiles"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
test = ["pytest", "pyyaml"]

[tool.pytest.ini_options]
testpaths = [".tests"]
markers = [
    "slow: integration tests requiring git fixtures (run on pre-push, not pre-commit)",
]

[tool.ruff]
target-version = "py312"
