[project]
name = "chezmoi-dotfiles"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
test = ["pytest", "pyyaml", "xonsh"]

[tool.pytest.ini_options]
testpaths = [".tests"]
markers = [
    "slow: runtime or integration tests (run in full validation and dedicated CI, not pre-commit)",
]

[tool.ruff]
target-version = "py312"
