[project]
name = "chezmoi-dotfiles"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
test = ["pytest", "pytest-fail-slow", "pyyaml", "xonsh==0.24.0"]

[tool.pytest.ini_options]
testpaths = [".tests"]
markers = [
    "slow: manual force-slow override atop automatic duration-based classification",
]

[tool.ruff]
target-version = "py312"
